@@ -206,6 +206,7 @@ hextorio-trades-per-hex-aquilo=[planet=aquilo] Trades Per Hex
 hextorio-coin-trade-chance=Coin Trade Chance
 hextorio-sell-trade-chance=Sell Trade Chance
 hextorio-quality-cost-multiplier=Quality Cost Multiplier
+hextorio-unresearched-penalty=Unresearched Penalty
 hextorio-vault-chance=Vault Chance
 hextorio-fulgoran-attractor-chance=[planet=fulgora][entity=fulgoran-ruin-attractor] Chance
 hextorio-small-egg-raft-chance=[planet=gleba][entity=gleba-spawner-small] Chance
@@ -342,6 +343,7 @@ hextorio-trades-per-hex-aquilo=Number of trades that each hex has other than the
 hextorio-coin-trade-chance=Chance of a trade involving coins.
 hextorio-sell-trade-chance=Chance of a coin-involving trade being one for selling items instead of buying items.
 hextorio-quality-cost-multiplier=Coin cost multiplier for buying items with quality > [quality=normal]. Higher values limit the potential for game-breaking trade exploits.\n\n[color=red][img=virtual-signal.signal-alert] Default setting value is balanced. Lower only if you want coin loops to continually exponentiate without bounds, generating practically infinite coins.[.color]
+hextorio-unresearched-penalty=Penalty applied to trade productivity for trades that give items which haven't been researched yet. The penalty is removed once all items in the trade's outputs have been researched.\n\nNo penalty is applied to trades with unresearched items in their inputs.\n\nSet to 0 for no penalty.
 hextorio-vault-chance=Chance of a [entity=fulgoran-ruin-vault] spawning in a hex on [planet=fulgora]. Needed for the tech tree.
 hextorio-fulgoran-attractor-chance=Chance of a [entity=fulgoran-ruin-attractor] spawning in a hex on [planet=fulgora].
 hextorio-small-egg-raft-chance=Chance of a [entity=gleba-spawner-small] spawning instead of the usual [entity=gleba-spawner] on [planet=gleba].
@@ -503,6 +505,7 @@ minimum-trade-quality=Minimum quality that this trade will try to use.
 maximum-trade-quality=Maximum quality that this trade will try to use.
 allow-locomotive-trading-tooltip=When enabled, [item=locomotive] trains will be able to make trades within their first __1__ [item=cargo-wagon] cargo wagons.\n\n[color=gray]The trades occur immediately when the train stops at a [item=train-stop] train stop [color=white]within this same hex[.color].[.color]
 send-outputs-to-cargo-wagons-tooltip=When enabled, keep the outputs of the trades within the cargo wagons. Otherwise, drop them off in this hex core.
+unresearched-penalty=Some of these trades give items that are [color=red]not yet researched[.color] and are penalized for it.
 
 [hextorio-gui]
 questbook-button-tooltip=Open/close the questbook (__CONTROL__toggle-questbook__)
