@@ -2,6 +2,7 @@
 Version: 1.3.13
 Date: 16/12/25
   Balancing:
+    - Trades that give items which are not yet produceable with a researched recipe now have a penalty to trade productivity. Can be tweaked or disabled in the mod settings.
     - Increased default mod settings for productivity rank-up requirements:
         Bronze -> Silver: 35%
         Silver -> Gold: 85%
